added impact, and market details

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "springs26-mids-capstone",
+  "name": "spring26-mids-capstone",
   "private": true,
   "version": "0.0.0",
   "type": "module",
